View Issue Details

IDProjectCategoryView StatusLast Update
0022716Open CASCADEOCCT:Visualizationpublic2012-04-03 15:11
ReporterszvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.1 
Target Version6.5.2Fixed in Version6.5.2 
Summary0022716: The method Aspect_GradientBackground::SetBgGradientFillMethod is not implemented
DescriptionThe method SetBgGradientFillMethod declared in the CDL file Aspect_GradientBackground is not implemented. This causes a link error building advanced C# wrapper.
TagsNo tags attached.
Test case numberTest case is not required

Relationships

related to 0022721 closedbugmaster Open CASCADE Review implementation of gradient background in 3D view 

Activities

san

2011-09-13 18:21

developer   ~0018142

Last edited: 2011-09-13 18:22

SVN branch http://svn/svn/occt/branches/OCC22716 is ready for reviewing.

Note that this bug is related to link errors when some external code attempts to call the method with missing implementation.
However, I do not see any meaningful way to use Aspect_GradientBackground::SetBgGradientFillMethod() in some DRAW command as it will not produce any visible result.
But if anybody finds it useful just to call this method to ensure absence of linker errors, I can add such call e.g. to vsetgradientbg command code.

san

2011-09-13 18:45

developer   ~0018143

Reviewed by SZV, there is a critical remark:

Hi Sergey,
What was that?
I do not speak about adding the missing call.
I speak about removal of the unused declaration from the CDL file.
Why have you assigned the bug to me again? What do you expect me to do?
I just expected you to remove the wrong declaration and integrate the modified CDL.
Can you do this simple thing?
BR,
Sergey

san

2011-09-13 19:00

developer   ~0018144

Solution corrected according to the remark by SZV.
SVN branch http://svn/svn/occt/branches/OCC22716 has been reviewed and is ready for testing.

ycy

2011-09-15 12:24

tester   ~0018159

Dear BugMaster,
SVN branch ( http://svn/svn/occt/branches/OCC22716 ) was
testing, test results were compared with KAS:dev:products-20110909-opt

Regressions were not found
    
See results in /dn45/occttests/results/KAS/dev/mkv-OCC22716-products_14092011/lin
See reference results in /dn45/occttests/results/KAS/dev/products-20110909-opt_09092011/lin
See test cases in /dn45/occttests/tests/ED

bugmaster

2011-09-15 15:00

administrator   ~0018167

Integration into trunk of occt repository

Date: 2011-09-15 14:34:59 +0400 (Thu, 15 Sep 2011)
New Revision: 9031

Modified:
   trunk/src/Aspect/Aspect_GradientBackground.cdl
   trunk/src/Aspect/Aspect_GradientBackground.cxx

Related Changesets

occt: master 3f4ec8f6

2011-09-15 10:34:59

san


Committer: bugmaster Details Diff
0022716: The method Aspect_GradientBackground::SetBgGradientFillMethod is not implemented Affected Issues
0022716
mod - src/Aspect/Aspect_GradientBackground.cdl Diff File
mod - src/Aspect/Aspect_GradientBackground.cxx Diff File

occt: master d10203e8

2011-09-15 11:16:56

pkv


Committer: bugmaster Details Diff
0022716: The method Aspect_GradientBackground::SetBgGradientFillMethod is not implemented Affected Issues
0022716
mod - src/IntTools/IntTools_FaceFace.cxx Diff File

Issue History

Date Modified Username Field Change
2011-08-31 10:16 szv New Issue
2011-08-31 10:16 szv Assigned To => san
2011-09-13 18:21 san Note Added: 0018142
2011-09-13 18:21 san Status new => assigned
2011-09-13 18:22 san Assigned To san => szv
2011-09-13 18:22 san Note Edited: 0018142
2011-09-13 18:45 san Assigned To szv => san
2011-09-13 18:45 san Note Added: 0018143
2011-09-13 19:00 san Note Added: 0018144
2011-09-13 19:00 san Status assigned => reviewed
2011-09-13 19:00 san Status reviewed => assigned
2011-09-13 19:00 san Status assigned => reviewed
2011-09-14 11:28 san Relationship added related to 0022721
2011-09-15 12:24 ycy Note Added: 0018159
2011-09-15 14:07 ycy Status reviewed => tested
2011-09-15 15:00 bugmaster Note Added: 0018167
2011-09-15 15:00 bugmaster Status tested => verified
2011-09-15 15:00 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master d10203e8
2012-03-29 17:26 bugmaster Changeset attached => occt master 3f4ec8f6
2012-04-03 15:11 apn Test case number => Test case is not required