0022716: The method Aspect_GradientBackground::SetBgGradientFillMethod is not implemented